Bemeneti mező és hozzáadás gomb felvétele (2. feladat)

--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Tedd lehetővé, hogy a felhasználó számokat tudjon egy listához adni.
+        Webalkalmazás esetén hozzlétre egy beviteli mezőt a szám megadásához és egy gombot a hozzáadáshoz. Ha lehetséges olyan mezőt adj meg, amibe csak számot lehet megadni, ha nem akkor gombkattintásra előbb validáld a beírt értéket a listába rakás előtt.
+    -->
+
+    <div>
+        <h1>Bemeneti mező</h1>
+        <input type="number" id="szam" placeholder="Szám">
+        <br>
+        <button  type="button" id="gomb">Hozzáadás</button>
+    </div>
+
+
     
 </body>
 </html>
