Hozzáadás után a lista elemei ki lesznek iratva a felvevő gomb alá. (3.feladat)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Bemeneti mező</h1>
         <input type="number" id="szam" placeholder="Szám">
         <br>
-        <button  type="button" id="gomb">Hozzáadás</button>
+        <button onclick="beolvasSzam()" type="button" id="gomb">Hozzáadás</button>
     </div>
 
 
