--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
         Webalkalmazás esetén hozzlétre egy beviteli mezőt a szám megadásához és egy gombot a hozzáadáshoz. Ha lehetséges olyan mezőt adj meg, amibe csak számot lehet megadni, ha nem akkor gombkattintásra előbb validáld a beírt értéket a listába rakás előtt.
     -->
 
-    <div>
-        <h1>Bemeneti mező</h1>
-        <input type="number" id="szam" placeholder="Szám">
-        <br>
-        <button onclick="beolvasSzam()" type="button" id="gomb">Hozzáadás</button>
-    </div>
-
+    <input type="number" id="szam" placeholder="Írj be egy számot">
+    <button id="gomb" onclick="beolvasSzam()">Hozzáad</button>
+    <br>
+    <p id="szamokLista">Hozzáadott számok:</p>
+    <button id="min" onclick="megtalalLegkisebb()">Legkisebb szám</button>
+    <p id="legkisebbSzam">Legkisebb szám: </p>
 
     
 </body>
