Minimum gomb helyett, maximum gomb és a logika is a maximum értéket keresi a listában.
(5. Feladat)

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     -->
 
     <input type="number" id="szam" placeholder="Írj be egy számot">
-    <button id="gomb" onclick="beolvasSzam()">Hozzáad</button>
-    <br>
-    <p id="szamokLista">Hozzáadott számok:</p>
-    <button id="min" onclick="megtalalLegkisebb()">Legkisebb szám</button>
-    <p id="legkisebbSzam">Legkisebb szám: </p>
+  <button id="gomb" onclick="beolvasSzam()">Hozzáad</button>
+  <br>
+  <p id="szamokLista">Hozzáadott számok:</p>
+  <button id="legnagyobbGomb" onclick="megkeresLegnagyobb()">Legnagyobb</button>
+  <p id="maxSzam">Maximum szám:</p>
+
 
     
 </body>
